--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^7.2.0",
     "glob": "^11.0.0",
     "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.46",
     "mysql2": "^3.11.4",
     "path": "^0.12.7",
